test/resources/testcontents/testing/saker/build/tests/tasks/script/SyntaxErrorsScriptTaskTest/missingternary.build
build {
	$condition = false
	include(
		secondtarget,
		MyParam1: $condition 
				? "1",
		MyParam2: $condition ? "1", 
				: "2",
	)
}


secondtarget(
	in MyParam
) {
	print($MyParam)
}